--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  0.3.tar.gz: 910b3bf74afce84bebc985650985f285c110de25
+  QDiskInfo-eae61be.tar.gz: b22105d980f6df3d9e4e4f44944139a56fa1a405
